# arch-hypr-dots

./: .gitignore  README.md  TODO.md  anime-watch-list.md  anime-watch-list.txt  aur_packages.txt  bashrc_laptop  ensure-installed.txt  history.txt  init.lua  install.sh  md_cheatsheet.md  nvim-config-list.md  nvim-config-list.txt  official_packages.txt  template.lua  todo.md
etc/cmdline.d/: arch.conf
etc/sddm.conf.d/: sddm.conf
home/user/: .bashrc  .tmux.conf  feather_cava_tmux.sh  feather_frontend.txt
home/user/.bashrc.d/: aliases  env-vars  final-inits  functions  prompt  scripts
home/user/.bashrc.d/pkgs.d/: pkg-init
home/user/.config/: dolphinrc  mimeapps.list
home/user/.config/Code/: Network Persistent State  TransportSecurity  machineid
home/user/.config/Feather/: CONTRIBUTING.md  LICENSE  README.md
home/user/.config/Feather/feather/: .gitignore  Cargo.toml  build.rs  structure.txt
home/user/.config/Feather/feather/src/: database.rs  lib.rs  player.rs  yt.rs
home/user/.config/Feather/feather_frontend/: .gitignore  Cargo.toml
home/user/.config/Feather/feather_frontend/src/: backend.rs  history.rs  lib.rs  main.rs  player.rs  search.rs
home/user/.config/Thunar/: uca.xml
home/user/.config/create-next-app-nodejs/: config.json
home/user/.config/dconf/: user
home/user/.config/fastfetch/: alternative_img_url  config.jsonc
home/user/.config/geany/: geany.conf  geany_socket_archlinux_wayland-1  session.conf
home/user/.config/google-chrome/: Local State  (+1 more)
install_scripts/: aur_packages.sh  formatting.sh  paths.sh  system_packages.sh
(+476 files in other folders)
