[package]
name = "feather"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
rustypipe = "0.9.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
sled = { version = "0.34.7",features = ["compression"] }
thiserror = "1.0"
tempfile = "3.16.0"
libmpv2 = "4.1.0"
dirs = "6.0.0"

[build-dependencies]
pkg-config = "0.3"

[lib]
name = "feather"
path = "src/lib.rs"


